workloads/confluent-resources/overlays/flink-demo-rbac/schema-registry-ingress-patch.yaml
## TODO: Move to ingresses Application
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: schema-registry
  namespace: kafka
spec:
  routes:
    - kind: Rule
      match: Host(`schema-registry.flink-demo-rbac.confluentdemo.local`)
      services:
        - name: schemaregistry
          port: 8081
          scheme: http
